[package]
name = "subset"
version = "0.3.0"
authors = ["Bulat Shaimardanov"]
edition = "2018"
description = "Various subsets of slice's items that are able to iterate over references to selected items."
keywords = ["Subset", "Vector", "Slice"]
categories = ["data-structures", "rust-patterns"]
repository = "https://github.com/mrbus/subset"
license = "MIT"

[dependencies]
